# ai-client-command-line

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: mind.py  scheduler_daemon.py  scheduler_runner.py
src/agentic_cli/: __init__.py  __main__.py  agent.py  cli.py  config.py
src/agentic_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_cli/llm/: __init__.py  client.py
src/agentic_cli/services/: __init__.py  base.py  scheduler.py  stt.py  tts.py  xmpp.py
src/agentic_cli/tools/: __init__.py  base.py  files.py  scheduler.py  screen.py  shell.py  xmpp.py
tests/: test_agent.py  test_config.py  test_llm.py  test_scheduler.py  test_services.py  test_tools.py  test_tools_xmpp.py
